--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "main": "index.js",
   "scripts": {
     "run": "cd src && node index.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "eslint-plugin-jest": "^28.8.3",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
+    "eslint": "^9.12.0",
+    "example-package": "^0.0.1",
+    "globals": "^15.10.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   }
