--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -144,5 +144,5 @@ jobs:
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
           service: jwt-pizza-service
-          cluster: jwt-pizza-service-2
+          cluster: jwt-pizza-service
           wait-for-service-stability: false
